# ece4-recipe

./: MANIFEST.in  QUICK_DEMO.sh  README.md  pyproject.toml
docs/presentation/: ece4-exp-intro.html  ece4-exp-intro.md
docs/source/: changelog.rst  index.rst  reference.rst
docs/source/old-docs/: api_reference.rst  installation.rst  intro.rst  quickstart.rst  recipes.rst  user_guide.rst  workflows.rst
ece4_exp/: cli.py  completion.py  generate-experiment-config.py  generate_experiment_config.py  init_config.py  paths.py
